<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/details_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ImageView
        android:id="@+id/imageView_imageFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/file_icon"
        android:src="@drawable/ic_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_detailScreenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/double_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:text="@string/download_status"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_imageFile" />

    <TextView
        android:id="@+id/textView_fileNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/file_name"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_fileName" />

    <TextView
        android:id="@+id/textView_fileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="@dimen/double_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_fileNameLabel"
        app:layout_constraintTop_toBottomOf="@id/textView_detailScreenTitle"
        tools:text="@string/glide_radioButton_text" />

    <TextView
        android:id="@+id/textView_statusLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/status"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_status" />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_fileNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/textView_fileName"
        tools:text="@string/success" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/button_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>