<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/iv_imageDownloads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/download_icon"
        android:src="@drawable/ic_downloads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:paddingStart="@dimen/standard_margin"
        android:paddingEnd="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_imageDownloads">

        <RadioButton
            android:id="@+id/radioButton_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/glide_radioButton_text"
            android:textSize="@dimen/standard_text_size" />

        <RadioButton
            android:id="@+id/radioButton_udacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/udacity_radioButton_text"
            android:textSize="@dimen/standard_text_size" />

        <RadioButton
            android:id="@+id/radioButton_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/retrofit_radioButton_text"
            android:textSize="@dimen/standard_text_size" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/large_margin"
        app:buttonDownloadingColor="@color/colorSecondaryDark"
        app:buttonOriginalColor="@color/colorSecondary"
        app:buttonText="@string/button_download"
        app:circleColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/colorSecondary"
        tools:buttonText="@string/button_download"
        />

</androidx.constraintlayout.widget.ConstraintLayout>